--- a/BoneTexture/Resources/UI/BoneTexture.ui
+++ b/BoneTexture/Resources/UI/BoneTexture.ui
@@ -488,8 +488,8 @@
      <property name="contentsFrameShape">
       <enum>QFrame::StyledPanel</enum>
      </property>
-     <layout class="QVBoxLayout" name="ResultVerticalLayout">
-      <item>
+     <layout class="QGridLayout" name="gridLayout_2">
+      <item row="0" column="0">
        <widget class="ctkCollapsibleGroupBox" name="DisplayColormapsCollapsibleGroupBox">
         <property name="title">
          <string>Display Colormaps</string>
@@ -536,64 +536,312 @@
         </layout>
        </widget>
       </item>
-      <item>
-       <widget class="ctkCollapsibleGroupBox" name="FeaturesTableCollapsibleGroupBox">
+      <item row="1" column="0">
+       <widget class="ctkCollapsibleGroupBox" name="CollapsibleGroupBox">
         <property name="title">
-         <string>Features Table</string>
+         <string>Features Value</string>
         </property>
-        <layout class="QVBoxLayout" name="verticalLayout_8">
+        <layout class="QVBoxLayout" name="verticalLayout_2">
          <item>
-          <widget class="QTableWidget" name="FeaturesableWidget"/>
+          <widget class="QTableWidget" name="displayFeaturesTableWidget">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Expanding" vsizetype="Maximum">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>326</height>
+            </size>
+           </property>
+           <property name="verticalScrollBarPolicy">
+            <enum>Qt::ScrollBarAsNeeded</enum>
+           </property>
+           <property name="autoScroll">
+            <bool>true</bool>
+           </property>
+           <property name="editTriggers">
+            <set>QAbstractItemView::NoEditTriggers</set>
+           </property>
+           <property name="selectionMode">
+            <enum>QAbstractItemView::NoSelection</enum>
+           </property>
+           <attribute name="horizontalHeaderCascadingSectionResizes">
+            <bool>true</bool>
+           </attribute>
+           <attribute name="horizontalHeaderDefaultSectionSize">
+            <number>100</number>
+           </attribute>
+           <attribute name="horizontalHeaderStretchLastSection">
+            <bool>true</bool>
+           </attribute>
+           <attribute name="verticalHeaderVisible">
+            <bool>false</bool>
+           </attribute>
+           <attribute name="verticalHeaderCascadingSectionResizes">
+            <bool>true</bool>
+           </attribute>
+           <attribute name="verticalHeaderStretchLastSection">
+            <bool>true</bool>
+           </attribute>
+           <row>
+            <property name="text">
+             <string>1</string>
+            </property>
+           </row>
+           <row>
+            <property name="text">
+             <string>2</string>
+            </property>
+           </row>
+           <row>
+            <property name="text">
+             <string>3</string>
+            </property>
+           </row>
+           <row>
+            <property name="text">
+             <string>4</string>
+            </property>
+           </row>
+           <row>
+            <property name="text">
+             <string>5</string>
+            </property>
+           </row>
+           <row>
+            <property name="text">
+             <string>6</string>
+            </property>
+           </row>
+           <row>
+            <property name="text">
+             <string>7</string>
+            </property>
+           </row>
+           <row>
+            <property name="text">
+             <string>8</string>
+            </property>
+           </row>
+           <row>
+            <property name="text">
+             <string>9</string>
+            </property>
+           </row>
+           <row>
+            <property name="text">
+             <string>10</string>
+            </property>
+           </row>
+           <column>
+            <property name="text">
+             <string>GLCM Features</string>
+            </property>
+           </column>
+           <column>
+            <property name="text">
+             <string>Values</string>
+            </property>
+           </column>
+           <column>
+            <property name="text">
+             <string>GLRLM Features</string>
+            </property>
+           </column>
+           <column>
+            <property name="text">
+             <string>Values</string>
+            </property>
+           </column>
+           <item row="0" column="0">
+            <property name="text">
+             <string>energy</string>
+            </property>
+           </item>
+           <item row="0" column="1">
+            <property name="text">
+             <string>0.0</string>
+            </property>
+           </item>
+           <item row="0" column="2">
+            <property name="text">
+             <string>shortRunEmphasis</string>
+            </property>
+           </item>
+           <item row="0" column="3">
+            <property name="text">
+             <string>0.0</string>
+            </property>
+           </item>
+           <item row="1" column="0">
+            <property name="text">
+             <string>entropy</string>
+            </property>
+           </item>
+           <item row="1" column="1">
+            <property name="text">
+             <string>0.0</string>
+            </property>
+           </item>
+           <item row="1" column="2">
+            <property name="text">
+             <string>longRunEmphasis</string>
+            </property>
+           </item>
+           <item row="1" column="3">
+            <property name="text">
+             <string>0.0</string>
+            </property>
+           </item>
+           <item row="2" column="0">
+            <property name="text">
+             <string>correlation</string>
+            </property>
+           </item>
+           <item row="2" column="1">
+            <property name="text">
+             <string>0.0</string>
+            </property>
+           </item>
+           <item row="2" column="2">
+            <property name="text">
+             <string>greyLevelNonuniformity</string>
+            </property>
+           </item>
+           <item row="2" column="3">
+            <property name="text">
+             <string>0.0</string>
+            </property>
+           </item>
+           <item row="3" column="0">
+            <property name="text">
+             <string>inverseDifferenceMoment</string>
+            </property>
+           </item>
+           <item row="3" column="1">
+            <property name="text">
+             <string>0.0</string>
+            </property>
+           </item>
+           <item row="3" column="2">
+            <property name="text">
+             <string>runLengthNonuniformity</string>
+            </property>
+           </item>
+           <item row="3" column="3">
+            <property name="text">
+             <string>0.0</string>
+            </property>
+           </item>
+           <item row="4" column="0">
+            <property name="text">
+             <string>inertia</string>
+            </property>
+           </item>
+           <item row="4" column="1">
+            <property name="text">
+             <string>0.0</string>
+            </property>
+           </item>
+           <item row="4" column="2">
+            <property name="text">
+             <string>lowGreyLevelRunEmphasis</string>
+            </property>
+           </item>
+           <item row="4" column="3">
+            <property name="text">
+             <string>0.0</string>
+            </property>
+           </item>
+           <item row="5" column="0">
+            <property name="text">
+             <string>clusterShade</string>
+            </property>
+           </item>
+           <item row="5" column="1">
+            <property name="text">
+             <string>0.0</string>
+            </property>
+           </item>
+           <item row="5" column="2">
+            <property name="text">
+             <string>highGreyLevelRunEmphasis</string>
+            </property>
+           </item>
+           <item row="5" column="3">
+            <property name="text">
+             <string>0.0</string>
+            </property>
+           </item>
+           <item row="6" column="0">
+            <property name="text">
+             <string>clusterProminence</string>
+            </property>
+           </item>
+           <item row="6" column="1">
+            <property name="text">
+             <string>0.0</string>
+            </property>
+           </item>
+           <item row="6" column="2">
+            <property name="text">
+             <string>shortRunLowGreyLevelEmphasis</string>
+            </property>
+           </item>
+           <item row="6" column="3">
+            <property name="text">
+             <string>0.0</string>
+            </property>
+           </item>
+           <item row="7" column="0">
+            <property name="text">
+             <string>haralickCorrelation</string>
+            </property>
+           </item>
+           <item row="7" column="1">
+            <property name="text">
+             <string>0.0</string>
+            </property>
+           </item>
+           <item row="7" column="2">
+            <property name="text">
+             <string>shortRunHighGreyLevelEmphasis</string>
+            </property>
+           </item>
+           <item row="7" column="3">
+            <property name="text">
+             <string>0.0</string>
+            </property>
+           </item>
+           <item row="8" column="2">
+            <property name="text">
+             <string>longRunLowGreyLevelEmphasis</string>
+            </property>
+           </item>
+           <item row="8" column="3">
+            <property name="text">
+             <string>0.0</string>
+            </property>
+           </item>
+           <item row="9" column="2">
+            <property name="text">
+             <string>longRunHighGreyLevelEmphasis</string>
+            </property>
+           </item>
+           <item row="9" column="3">
+            <property name="text">
+             <string>0.0</string>
+            </property>
+           </item>
+          </widget>
          </item>
         </layout>
+        <zorder>displayFeaturesTableWidget</zorder>
+        <zorder>displayFeaturesTableWidget</zorder>
        </widget>
-      </item>
-     </layout>
-    </widget>
-   </item>
-   <item>
-    <widget class="ctkCollapsibleButton" name="ExportationCollapsibleButton">
-     <property name="focusPolicy">
-      <enum>Qt::StrongFocus</enum>
-     </property>
-     <property name="text">
-      <string>Exportation</string>
-     </property>
-     <property name="contentsFrameShape">
-      <enum>QFrame::StyledPanel</enum>
-     </property>
-     <layout class="QVBoxLayout" name="ExportationVerticalLayout">
-      <item>
-       <layout class="QHBoxLayout" name="OutputPathHorizontalLayout">
-        <item>
-         <widget class="QLabel" name="OutputPathLabel">
-          <property name="text">
-           <string>Result file path</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="ctkPathLineEdit" name="OutputPathLineEdit"/>
-        </item>
-       </layout>
-      </item>
-      <item>
-       <layout class="QHBoxLayout" name="SavingButtonsHorizontalLayout">
-        <item>
-         <widget class="QPushButton" name="SaveFeaturesPushButton">
-          <property name="text">
-           <string>Save Features</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QPushButton" name="SaveColormapsPushButton">
-          <property name="text">
-           <string>Save Colormaps</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
       </item>
      </layout>
     </widget>
@@ -636,11 +884,6 @@
    <extends>QGroupBox</extends>
    <header>ctkCollapsibleGroupBox.h</header>
    <container>1</container>
-  </customwidget>
-  <customwidget>
-   <class>ctkPathLineEdit</class>
-   <extends>QWidget</extends>
-   <header>ctkPathLineEdit.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
