--- a/BoneTextureSerializer/Resources/UI/BoneTextureSerializer.ui
+++ b/BoneTextureSerializer/Resources/UI/BoneTextureSerializer.ui
@@ -102,6 +102,9 @@
         <property name="checked">
          <bool>false</bool>
         </property>
+        <property name="collapsed">
+         <bool>true</bool>
+        </property>
         <layout class="QVBoxLayout" name="verticalLayout_9">
          <property name="sizeConstraint">
           <enum>QLayout::SetMinimumSize</enum>
@@ -212,7 +215,7 @@
               <number>10</number>
              </property>
              <property name="value">
-              <number>6</number>
+              <number>4</number>
              </property>
             </widget>
            </item>
