STYLE: Last documentation modification before first push on SlicerExtensionIndex

--- a/BoneTexture/Resources/UI/BoneTexture.ui
+++ b/BoneTexture/Resources/UI/BoneTexture.ui
@@ -542,7 +542,7 @@
       <item row="1" column="0">
        <widget class="ctkCollapsibleGroupBox" name="CollapsibleGroupBox">
         <property name="title">
-         <string>Features Value</string>
+         <string>Feature Values</string>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_2">
          <item>
