--- a/BoneTextureSerializer/Resources/UI/BoneTextureSerializer.ui
+++ b/BoneTextureSerializer/Resources/UI/BoneTextureSerializer.ui
@@ -212,7 +212,7 @@
            <item row="3" column="1">
             <widget class="QSpinBox" name="GLCMNeighborhoodRadiusSpinBox">
              <property name="maximum">
-              <number>10</number>
+              <number>100</number>
              </property>
              <property name="value">
               <number>4</number>
@@ -334,7 +334,7 @@
              <item row="1" column="1">
               <widget class="QDoubleSpinBox" name="GLRLMMaxDistanceSpinBox">
                <property name="maximum">
-                <double>5.000000000000000</double>
+                <double>1000.000000000000000</double>
                </property>
                <property name="singleStep">
                 <double>0.100000000000000</double>
@@ -376,7 +376,7 @@
            <item row="5" column="1">
             <widget class="QSpinBox" name="GLRLMNeighborhoodRadiusSpinBox">
              <property name="maximum">
-              <number>10</number>
+              <number>100</number>
              </property>
              <property name="value">
               <number>4</number>
@@ -411,14 +411,14 @@
       <item>
        <widget class="QPushButton" name="ComputeColormapsPushButton">
         <property name="text">
-         <string>Compute Colormaps</string>
+         <string>Compute Texture Maps</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="ComputeFeaturesPushButton">
         <property name="text">
-         <string>Compute Features</string>
+         <string>Compute Texture Feature Set</string>
         </property>
        </widget>
       </item>
