--- a/BoneTexture/Resources/UI/BoneTexture.ui
+++ b/BoneTexture/Resources/UI/BoneTexture.ui
@@ -155,6 +155,13 @@
        </widget>
       </item>
       <item>
+       <widget class="QPushButton" name="ComputeParametersBasedOnInputsButton">
+        <property name="text">
+         <string>Populate Parameters Based on Inputs</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="ctkCollapsibleGroupBox" name="GLCMParametersCollapsibleGroupBox">
         <property name="enabled">
          <bool>true</bool>
@@ -212,8 +219,11 @@
            </item>
            <item row="1" column="1">
             <widget class="QSpinBox" name="GLCMNumberOfBinsSpinBox">
+             <property name="minimum">
+              <number>1</number>
+             </property>
              <property name="maximum">
-              <number>255</number>
+              <number>1200</number>
              </property>
              <property name="value">
               <number>10</number>
@@ -424,8 +434,11 @@
            </item>
            <item row="2" column="1">
             <widget class="QSpinBox" name="GLRLMNumberOfBinsSpinBox">
+             <property name="minimum">
+              <number>1</number>
+             </property>
              <property name="maximum">
-              <number>255</number>
+              <number>1200</number>
              </property>
              <property name="value">
               <number>10</number>
