ENH: Allow copying multi-selection in results table.
Addresses point 3 in https://github.com/Kitware/BoneTextureExtension/issues/21

Paste is tested in Libreoffice Calc and Google Docs. Copied text is in TSV format, so most spreadsheet editors should pick it up.

--- a/BoneTexture/Resources/UI/BoneTexture.ui
+++ b/BoneTexture/Resources/UI/BoneTexture.ui
@@ -646,7 +646,7 @@
             <set>QAbstractItemView::NoEditTriggers</set>
            </property>
            <property name="selectionMode">
-            <enum>QAbstractItemView::NoSelection</enum>
+            <enum>QAbstractItemView::ExtendedSelection</enum>
            </property>
            <attribute name="horizontalHeaderCascadingSectionResizes">
             <bool>true</bool>
