ENH: Add a progress bar to BoneTextureSerializer.
Progress bar appears for both 'Compute Texture Maps' and 'Compute Texture Feature Set'.

--- a/BoneTextureSerializer/Resources/UI/BoneTextureSerializer.ui
+++ b/BoneTextureSerializer/Resources/UI/BoneTextureSerializer.ui
@@ -492,6 +492,13 @@
         </property>
        </widget>
       </item>
+      <item>
+       <widget class="QProgressBar" name="ComputationProgressBar">
+        <property name="visible">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
